# ros2_ws

./: .gitignore  rebuild.sh  start_aruco_approach.sh  start_robot.sh  start_robot_pre.sh
.cursor/rules/: delivery-robot.mdc
.cursor/skills/robot_onboard/: SKILL.md
aruco_maps/: active_map.txt  b2ortak.yaml  b2yeni.yaml  default.yaml  hubx2.yaml  scaleup.yaml  sclup2.yaml  yeniscaleup.yaml
src/delivery_robot/: HARDWARE.md  LOCALIZATION.md  README.md  ROADMAP.md
src/delivery_robot/aruco_detector/: package.xml  setup.py
src/delivery_robot/aruco_detector/aruco_detector/: aruco_approach_node.py  aruco_detector_node.py
src/delivery_robot/delivery_mission/: package.xml  setup.cfg  setup.py
src/delivery_robot/delivery_mission/delivery_mission/: mission_manager_node.py
src/delivery_robot/delivery_robot_bringup/: CMakeLists.txt  package.xml
src/delivery_robot/delivery_robot_bringup/config/: aruco_markers.yaml  camera.yaml  camera_calibration.yaml  delivery.yaml  ekf.yaml  imu.yaml  imu_calibration.yaml  menu.yaml  motor_pins.yaml
src/delivery_robot/delivery_robot_bringup/launch/: aruco_approach.launch.py  aruco_test.launch.py  bringup.launch.py  localization.launch.py
src/delivery_robot/delivery_robot_bringup/legacy/: start_aruco_test.sh
src/delivery_robot/delivery_robot_msgs/: CMakeLists.txt  package.xml
src/delivery_robot/delivery_robot_msgs/msg/: ApproachStatus.msg  ArucoDetections.msg  DeliveryGoal.msg  DeliveryStatus.msg  MotorStatus.msg
src/delivery_robot/imu_driver/: package.xml  setup.py
src/delivery_robot/imu_driver/imu_driver/: calibrate_imu.py  imu_driver_node.py
src/delivery_robot/motor_driver/: package.xml  setup.py
src/delivery_robot/motor_driver/motor_driver/: motor_driver_node.py
src/delivery_robot/orb_slam3_ros/: CMakeLists.txt  package.xml
src/delivery_robot/orb_slam3_ros/config/: orb_slam3_pi5.yaml
src/delivery_robot/orb_slam3_ros/src/: orb_slam3_node.cpp
src/delivery_robot/pi_camera_driver/: package.xml  setup.cfg  setup.py
src/delivery_robot/pi_camera_driver/pi_camera_driver/: calibrate_camera.py  camera_node.py
src/delivery_robot/robot_web_ui/: package.xml  setup.cfg  setup.py
src/delivery_robot/robot_web_ui/robot_web_ui/: aruco_test_node.py  web_ui_node.py
src/delivery_robot/robot_web_ui/robot_web_ui/static/: admin.html  aruco_test.html  index.html  order.html
