<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_robot_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configuration for the delivery robot</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pi_camera_driver</exec_depend>
  <exec_depend>motor_driver</exec_depend>
  <exec_depend>robot_web_ui</exec_depend>
  <exec_depend>delivery_robot_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>orb_slam3_ros</exec_depend>
  <exec_depend>aruco_detector</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
