<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_driver</name>
  <version>1.0.0</version>
  <description>L298N motor driver with mecanum wheel kinematics for ROS2</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>delivery_robot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
