<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_web_ui</name>
  <version>1.0.0</version>
  <description>Web dashboard with camera feed, joystick, and motor control for the delivery robot</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>delivery_robot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
